--- a/src/main/resources/static/app/css/mobile.css
+++ b/src/main/resources/static/app/css/mobile.css
@@ -65,10 +65,28 @@ input[type="checkbox"] {
     display:none !important;
 }
 
-.error-message {
-    background-color: red;
+.message {
+
     color: white;
     margin :10px 0px 0px -16px;
     float: left;
     margin: 11px 0 0;
 }
+
+.error {
+    background-color: red;
+}
+
+.success {
+    background-color: green;
+}
+
+#chooseRadio {
+    margin: 30px;
+}
+
+#deprecatedEntryButtons > input {
+    padding: 30px;
+}
+
+
