--- a/src/main/resources/static/app/css/mobile.css
+++ b/src/main/resources/static/app/css/mobile.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Material Icons'), local('MaterialIcons-Regular'), url(../static/app/css/MaterialIcons-Regular.woff2) format('woff2'), url(../static/app/css/MaterialIcons-Regular.woff) format('woff');
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    -moz-font-feature-settings: 'liga';
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .hide {
     display: none !important;
 }
