--- a/src/main/resources/static/app/css/mobile.css
+++ b/src/main/resources/static/app/css/mobile.css
@@ -264,3 +264,7 @@ md-input-container.md-default-theme .my-input {
     border-color: rgba(255, 255, 255, 255);
     color: rgba(255, 255, 255, 255);
 }
+
+my-list-item[ng-class="my-focused"] {
+    background-color: rgba(158, 158, 158, 0.2);
+}
