--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -125,7 +125,7 @@ my-list-item, my-list-item .my-list-item-inner {
     min-height: 48px;
 }
 
-my-list-item.my-no-proxy, my-list-item .my-no-style {
+.my-no-style {
     flex: 1 1 0;
     padding: 0 16px;
     position: relative;
@@ -168,10 +168,6 @@ my-list-item.my-2-line .my-list-item-text h4, my-list-item.my-2-line > .my-no-st
     font-weight: 400;
     line-height: 0.75em;
     margin: 10px 0 5px;
-}
-
-element.style {
-    max-width: 1554px;
 }
 
 my-list.my-default-theme my-list-item.my-2-line .my-list-item-text p, my-list.my-default-theme my-list-item.my-3-line .my-list-item-text p {
@@ -260,7 +256,7 @@ my-divider {
     background: rgba(255, 0, 0, 0.8);
 }
 
-md-input-container.md-default-theme .my-input {
+md-input-container.md-default-theme > .my-input {
     border-color: rgba(255, 255, 255, 255);
     color: rgba(255, 255, 255, 255);
 }
