--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -86,8 +86,11 @@ ul li {
 }
 
 /* remove dotted outline on buttons in firefox */
-button::-moz-focus-inner {
-    border: 0;
+:focus {
+    outline:none;
+}
+::-moz-focus-inner {
+    border:0;
 }
 
 /* TODO */
