Prevent DDoS detection: Some feed resources reject multiple calls within less than a second. Due to @ValidSyndication a feed resource gets called more than once within a second during subscription. This commit removes @ValidSyndication in order to avoid a DDoS detection.

--- a/myreader-frontend/src/templates/subscription.html
+++ b/myreader-frontend/src/templates/subscription.html
@@ -11,13 +11,12 @@
             <input required
                    name="origin"
                    ng-model="subscription.origin"
-                   my-valid-syndication disable="isEditForm()"
+                   disable="isEditForm()"
                    ng-model-options="{ debounce: 500 }"
                    ng-disabled="subscriptionForm.origin.$pending">
 
             <div ng-messages="subscriptionForm.origin.$error">
                 <div ng-message="required">required</div>
-                <div ng-message="validSyndication">This is not a valid syndication feed</div>
             </div>
         </md-input-container>
     </div>
