--- a/myreader-frontend/src/templates/subscription.html
+++ b/myreader-frontend/src/templates/subscription.html
@@ -1,15 +1,15 @@
 <form name="subscriptionForm">
-    <md-input-container ng-show="isEditForm()" class="md-block">
+    <md-input-container ng-show="subscription.uuid" class="md-block">
         <label>Title</label>
         <input name="title" ng-model="subscription.title">
     </md-input-container>
 
-    <md-input-container ng-hide="isEditForm()"  class="md-block">
+    <md-input-container ng-hide="subscription.uuid" class="md-block">
         <label>Url</label>
         <input required
                name="origin"
                ng-model="subscription.origin"
-               disable="isEditForm()"
+               disable="subscription.uuid"
                ng-model-options="{ debounce: 500 }"
                ng-disabled="subscriptionForm.origin.$pending">
 
@@ -19,14 +19,14 @@
 
     </md-input-container>
 
-    <md-input-container ng-show="isEditForm()" md-no-float class="md-icon-float md-icon-right">
+    <md-input-container ng-show="subscription.uuid" md-no-float class="md-icon-float md-icon-right">
         <label>Url</label>
         <input ng-model="subscription.origin" disabled>
         <md-icon md-font-library="material-icons" ng-click="open()">open_in_new</md-icon>
     </md-input-container>
 
     <md-autocomplete
-            ng-show="isEditForm()"
+            ng-show="subscription.uuid"
             md-selected-item="subscription.tag"
             md-search-text="searchText"
             md-items="item in querySearch(searchText)"
@@ -43,6 +43,6 @@
     <br>
     <div layout="row" layout-align="end center">
         <div><md-button flex="50" class="md-primary md-raised" ng-click="save()">Save</md-button></div>
-        <div><md-button flex="50" class="md-primary md-raised md-warn" ng-click="delete()">Delete</md-button></div>
+        <div><md-button flex="50" class="md-primary md-raised md-warn" ng-show="subscription.uuid" ng-click="delete()">Delete</md-button></div>
     </div>
 </form>
