--- a/myreader-frontend/src/templates/admin.html
+++ b/myreader-frontend/src/templates/admin.html
@@ -1,15 +1,3 @@
-<md-list>
-    <md-list-item ng-click="openOrigin(feed)" md-no-ink class="md-2-line" ng-repeat="feed in data.feeds">
-        <div layout="row">
-            <div class="md-list-item-text">
-                <div>
-                    <h3 tabindex="-1">{{::feed.title | htmlEntities}}</h3>
-                    <h4>
-                        {{::feed.createdAt | timeago}}
-                    </h4>
-                </div>
-            </div>
-        </div>
-        <md-divider></md-divider>
-    </md-list-item>
-</md-list>
+<div layout-align="center">
+    <div><md-button flex="50" class="md-primary md-raised" ng-click="refresh()">Refresh index</md-button></div>
+</div>
