Add option to refresh search index on admin page

--- a/myreader-frontend/src/templates/admin.html
+++ b/myreader-frontend/src/templates/admin.html
@@ -1,3 +1,4 @@
-<div layout-align="center">
-    <div><md-button flex="50" class="md-primary md-raised" ng-click="refresh()">Refresh index</md-button></div>
-</div>
+<md-subheader class="md-no-sticky">Admin actions</md-subheader>
+<md-list-item class="secondary-button-padding">
+    <md-button class="md-primary md-raised" ng-click="refreshIndex()">Refresh index</md-button>
+</md-list-item>
