--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -1,9 +1,5 @@
 <md-sidenav layout="column" class="site-sidenav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-    <md-toolbar>
-        <md-button class="md-icon-button" ng-hide="isInvisible('gt-md')" ng-click="showApplicationProperties()" aria-label="Menu">
-            <md-icon md-font-library="material-icons">help</md-icon>
-        </md-button>
-    </md-toolbar>
+    <md-toolbar></md-toolbar>
 
     <md-content flex role="navigation">
         <ul class="subscription-tag-menu">
