--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -261,3 +261,7 @@ md-input-container.md-default-theme > .my-input {
 my-list-item[ng-class="my-focused"] {
     background-color: rgba(158, 158, 158, 0.2);
 }
+
+.my-pointer {
+    cursor: pointer;
+}
