Move feed detail top bar actions to feed detail page

--- a/myreader-frontend/src/templates/feed-detail.html
+++ b/myreader-frontend/src/templates/feed-detail.html
@@ -1,42 +1,47 @@
 <form name="feedForm">
-    <div layout="row">
-        <md-input-container flex>
-            <label>Title</label>
-            <input name="title" ng-model="feed.title" required>
+    <md-input-container class="md-block">
+        <label>Title</label>
+        <input name="title" autocomplete="off" ng-model="feed.title" required>
 
-            <div ng-messages="feedForm.title.$error">
-                <div ng-message="required">required</div>
-            </div>
-        </md-input-container>
-    </div>
-    <div layout="row">
-        <md-input-container flex>
-            <label>Url</label>
-            <input required
-                   name="url"
-                   ng-model="feed.url"
-                   ng-model-options="{ debounce: 500 }"
-                   ng-disabled="feedForm.url.$pending">
+        <div ng-messages="feedForm.title.$error">
+            <div ng-message="required">required</div>
+        </div>
+    </md-input-container>
 
-            <div ng-messages="feedForm.url.$error">
-                <div ng-message="required">required</div>
-                <div ng-message="validSyndication">This is not a valid syndication feed</div>
-            </div>
-        </md-input-container>
+    <md-input-container class="md-block">
+        <label>Url</label>
+        <input required
+               name="url"
+               autocomplete="off"
+               ng-model="feed.url"
+               ng-model-options="{ debounce: 500 }"
+               ng-disabled="feedForm.url.$pending">
+        <md-icon md-font-library="material-icons" class="my-pointer" ng-click="open()">open_in_new</md-icon>
+        <div ng-messages="feedForm.url.$error">
+            <div ng-message="required">required</div>
+            <div ng-message="validSyndication">This is not a valid syndication feed</div>
+        </div>
+    </md-input-container>
+
+    <br>
+    <div layout="row" layout-align="end center">
+        <div><md-button flex="50" class="md-primary md-raised" ng-click="save()">Save</md-button></div>
+        <div><md-button flex="50" class="md-primary md-raised md-warn" ng-click="deleteFeed()">Delete</md-button></div>
     </div>
 </form>
 
 <h2 ng-hide="feed.errors.length === 0">
     <span>Fetch errors in the last {{::feed.errors[0].retainDays}} day(s)</span>
+    <md-icon md-font-library="material-icons" class="my-pointer" ng-click="refresh()">refresh</md-icon>
 </h2>
 <md-list>
     <md-list-item md-no-ink class="md-3-line" ng-repeat="error in feed.errors">
         <div class="md-list-item-text">
             <div>
-                <h3 tabindex="-1">{{::error.message}}</h3>
-                <h4>
+                <p>{{::error.message}}</p>
+                <p>
                     {{::error.createdAt | timeago}}
-                </h4>
+                </p>
             </div>
         </div>
         <md-divider></md-divider>
