Add cursor pointer to subscription url on subscription page

--- a/myreader-frontend/src/templates/subscription.html
+++ b/myreader-frontend/src/templates/subscription.html
@@ -22,7 +22,7 @@
     <md-input-container ng-show="subscription.uuid" md-no-float class="md-icon-float md-icon-right">
         <label>Url</label>
         <input ng-model="subscription.origin" disabled>
-        <md-icon md-font-library="material-icons" ng-click="open()">open_in_new</md-icon>
+        <md-icon md-font-library="material-icons" class="my-pointer" ng-click="open()">open_in_new</md-icon>
     </md-input-container>
 
     <md-autocomplete
