--- a/myreader-frontend/src/templates/subscription-entry.html
+++ b/myreader-frontend/src/templates/subscription-entry.html
@@ -1,4 +1,7 @@
-<h3 hide-gt-md>{{entry.title | htmlEntities}}<md-icon md-font-library="material-icons" ng-click="open($event)">open_in_new</md-icon></h3>
+<h3 hide-gt-md>
+    <span>{{entry.title | htmlEntities}}</span>
+    <md-icon md-font-library="material-icons" class="my-pointer" ng-click="open($event)">open_in_new</md-icon>
+</h3>
 <h3 hide show-gt-md><a ng-href="{{entry.origin}}" ng-click="open($event)">{{entry.title | htmlEntities}}</a></h3>
 
 <div ng-bind-html="entry.content | targetBlank" my-wrap-entry-content></div>
