--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -51,9 +51,7 @@
         <div ui-view="actions" class="md-toolbar-tools"></div>
     </md-toolbar>
 
-    <div hide-gt-md id="md-progress-linear-wrapper">
-        <md-progress-linear loading-indicator md-mode="indeterminate"></md-progress-linear>
-    </div>
+    <my-loading-indicator></my-loading-indicator>
 
     <md-content ui-view="content" md-scroll-y flex layout-padding ></md-content>
 </div>
