--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -91,8 +91,7 @@ ul li {
 
 /* TODO */
 #md-progress-linear-wrapper {
-    height: 10px;
-    margin-top: -5px;
+    min-height: 5px;
 }
 
 md-toolbar ~ md-content > my-list {
