--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -1,3 +1,36 @@
+<md-subheader class="md-primary my-search-subheader">
+    <div layout="row" layout-align="center end" layout-wrap>
+        <div flex="85" flex-md="95" flex-sm="95" flex-xs="92">
+            <md-input-container class="md-block my-search-input-container">
+                <md-icon md-font-library="material-icons">search</md-icon>
+                <input class="my-input"
+                       name="search"
+                       ng-model-options="{ debounce: 250 }"
+                       ng-model="search"
+                       aria-label="search">
+            </md-input-container>
+        </div>
+        <div flex="15" flex-md="5" flex-sm="5" flex-xs="8">
+            <div layout="row" layout-align="end center">
+                <div>
+                    <md-button hide show-gt-md aria-label="label" class="md-icon-button" ng-click="down()">
+                        <md-icon md-font-library="material-icons" class="my-pointer">keyboard_arrow_down</md-icon>
+                    </md-button></div>
+                <div>
+                    <md-button hide show-gt-md aria-label="photo" class="md-icon-button" ng-click="up()">
+                        <md-icon md-font-library="material-icons" class="my-pointer">keyboard_arrow_up</md-icon>
+                    </md-button>
+                </div>
+                <div>
+                    <md-button aria-label="comment" class="md-icon-button" ng-click="forceRefresh()">
+                        <md-icon md-font-library="material-icons" class="my-pointer">refresh</md-icon>
+                    </md-button>
+                </div>
+            </div>
+        </div>
+    </div>
+</md-subheader>
+
 <my-list class="md-default-theme">
     <my-list-item ng-class="{{isFocused(entry)}}" class="my-2-line" ng-repeat="entry in data.entries | filter: visible">
         <div class="my-no-style my-list-item-inner">
