--- a/myreader-frontend/src/templates/feeds.html
+++ b/myreader-frontend/src/templates/feeds.html
@@ -1,12 +1,26 @@
-<md-input-container class="md-block">
-    <md-icon md-font-library="material-icons">search</md-icon>
-    <input class="my-input"
-           name="searchKey"
-           ng-model-options="{ debounce: 250 }"
-           ng-model="searchKey"
-           aria-label="search">
-    <md-icon md-font-library="material-icons" ng-click="refresh()" class="my-pointer">refresh</md-icon>
-</md-input-container>
+<md-subheader class="md-primary my-subheader">
+    <div layout="row" layout-align="center end" layout-wrap>
+        <div flex="90">
+            <md-input-container class="md-block my-input-container">
+                <md-icon md-font-library="material-icons">search</md-icon>
+                <input class="my-input"
+                       name="searchKey"
+                       ng-model-options="{ debounce: 250 }"
+                       ng-model="searchKey"
+                       aria-label="search">
+            </md-input-container>
+        </div>
+        <div flex>
+            <div layout="row" layout-align="end center">
+                <div>
+                    <md-button aria-label="label" class="md-icon-button" ng-click="down()">
+                        <md-icon md-font-library="material-icons" ng-click="refresh()" class="my-pointer">refresh</md-icon>
+                    </md-button>
+                </div>
+            </div>
+        </div>
+    </div>
+</md-subheader>
 
 <md-list>
     <md-list-item ng-click="open(feed)" md-no-ink class="md-2-line" ng-repeat="feed in data.feeds | filter:searchKey">
