--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -1,7 +1,7 @@
-<md-subheader class="md-primary my-search-subheader">
+<md-subheader class="md-primary my-subheader">
     <div layout="row" layout-align="center end" layout-wrap>
         <div flex="85" flex-md="95" flex-sm="95" flex-xs="92">
-            <md-input-container class="md-block my-search-input-container">
+            <md-input-container class="md-block my-input-container">
                 <md-icon md-font-library="material-icons">search</md-icon>
                 <input class="my-input"
                        name="search"
