--- a/myreader-frontend/src/templates/subscription-tags.html
+++ b/myreader-frontend/src/templates/subscription-tags.html
@@ -48,7 +48,11 @@
 </md-sidenav>
 <div layout="column" tabIndex="-1" role="main" flex>
     <md-toolbar hide-gt-md>
-        <div ui-view="actions" class="md-toolbar-tools"></div>
+        <div class="md-toolbar-tools">
+            <md-button class="md-icon-button" hide-gt-md ng-click="openMenu()" aria-label="Menu">
+                <md-icon md-font-library="material-icons">menu</md-icon>
+            </md-button>
+        </div>
     </md-toolbar>
 
     <my-loading-indicator></my-loading-indicator>
