Replace $mdToast service with notificationPanel component in feed detail page.

--- a/myreader-frontend/src/templates/feed-detail.html
+++ b/myreader-frontend/src/templates/feed-detail.html
@@ -42,6 +42,8 @@
                 my-on-error="onError(error)">
         </my-button>
     </my-button-group>
+
+    <my-notification-panel layout="row" layout-align="end center" my-message="message"></my-notification-panel>
 </form>
 
 <h2 ng-hide="feed.errors.length === 0">
