Replace $mdToast service with notificationPanel component in login page.

--- a/myreader-frontend/src/templates/login.html
+++ b/myreader-frontend/src/templates/login.html
@@ -4,6 +4,7 @@
     <my-loading-indicator></my-loading-indicator>
 
     <md-content ui-view="content" md-scroll-y flex layout-padding>
+        <my-notification-panel layout="row" layout-align="center center" my-message="message"></my-notification-panel>
         <div layout="row">
             <div flex></div>
             <div flex>
@@ -43,5 +44,6 @@
                 </form>
             </div>
             <div flex></div>
+        </div>
     </md-content>
 </div>
