Replace $mdToast service with notificationPanel component in admin overview page.

--- a/myreader-frontend/src/templates/admin.html
+++ b/myreader-frontend/src/templates/admin.html
@@ -9,6 +9,7 @@
                 my-on-success="onSuccessRefreshIndex()"
                 my-on-error="onErrorRefreshIndex(error)">
         </my-button>
+        <my-notification-panel layout="row" my-message="message"></my-notification-panel>
     </my-button-group>
 </md-list-item>
 
