Replace $mdToast service with notificationPanel component in subscription page.

--- a/myreader-frontend/src/templates/subscription.html
+++ b/myreader-frontend/src/templates/subscription.html
@@ -60,4 +60,5 @@
                 ng-show="subscription.uuid">
         </my-button>
     </my-button-group>
+    <my-notification-panel layout="row" layout-align="end center" my-message="message"></my-notification-panel>
 </form>
