Replace $mdToast service with notificationPanel in SubscriptionNavigationCtrl.

--- a/myreader-frontend/src/templates/feeds.html
+++ b/myreader-frontend/src/templates/feeds.html
@@ -20,6 +20,7 @@
             </div>
         </div>
     </div>
+    <my-notification-panel layout="row" layout-align="center center" my-message="message"></my-notification-panel>
 </md-subheader>
 
 <md-list>
