--- a/myreader-frontend/src/templates/subscription-entries.html
+++ b/myreader-frontend/src/templates/subscription-entries.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </div>
+    <my-notification-panel layout="row" layout-align="center center" my-message="message"></my-notification-panel>
 </md-subheader>
 
 <my-list class="md-default-theme">
