--- a/myreader-frontend/src/templates/feed-detail.html
+++ b/myreader-frontend/src/templates/feed-detail.html
@@ -16,7 +16,7 @@
                ng-model="feed.url"
                ng-model-options="{ debounce: 500 }"
                ng-disabled="feedForm.url.$pending">
-        <md-icon md-font-library="material-icons" class="my-pointer" ng-click="open()">open_in_new</md-icon>
+        <md-icon md-font-library="material-icons" class="my-pointer" ng-if="feed.url" my-safe-opener url="{{feed.url}}">open_in_new</md-icon>
         <div ng-messages="feedForm.url.$error">
             <div ng-message="required">required</div>
             <div ng-message="validSyndication">This is not a valid syndication feed</div>
@@ -48,6 +48,7 @@
 
 <h2 ng-hide="feed.errors.length === 0">
     <span>Fetch errors in the last {{::feed.errors[0].retainDays}} day(s)</span>
+
     <md-icon md-font-library="material-icons" class="my-pointer" ng-click="refresh()">refresh</md-icon>
 </h2>
 <md-list>
